@@ -778,7 +778,7 @@ bool Plugin::SetStartupInfo(PluginStartupInfo *Info)
 	ExecuteStruct<iSetStartupInfo> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 
 		if (bPendingRemove)
@@ -794,7 +794,7 @@ bool Plugin::GetGlobalInfo(GlobalInfo *gi)
 	ExecuteStruct<iGetGlobalInfo> es;
 	if (has(es))
 	{
-		gi->Instance = m_Instance.get();
+		gi->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, gi);
 		return !bPendingRemove;
 	}
@@ -849,7 +849,7 @@ void* Plugin::Analyse(AnalyseInfo *Info)
 	ExecuteStruct<iAnalyse> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -860,7 +860,7 @@ void Plugin::CloseAnalyse(CloseAnalyseInfo* Info)
 	ExecuteStruct<iCloseAnalyse> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 }
@@ -871,7 +871,7 @@ void* Plugin::Open(OpenInfo* Info)
 	ExecuteStruct<iOpen> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -882,7 +882,7 @@ int Plugin::SetFindList(SetFindListInfo* Info)
 	ExecuteStruct<iSetFindList> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -893,7 +893,7 @@ int Plugin::ProcessEditorInput(ProcessEditorInputInfo* Info)
 	ExecuteStruct<iProcessEditorInput> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -904,7 +904,7 @@ int Plugin::ProcessEditorEvent(ProcessEditorEventInfo* Info)
 	ExecuteStruct<iProcessEditorEvent> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -915,7 +915,7 @@ int Plugin::ProcessViewerEvent(ProcessViewerEventInfo* Info)
 	ExecuteStruct<iProcessViewerEvent> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -926,7 +926,7 @@ int Plugin::ProcessDialogEvent(ProcessDialogEventInfo* Info)
 	ExecuteStruct<iProcessDialogEvent> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -937,7 +937,7 @@ int Plugin::ProcessSynchroEvent(ProcessSynchroEventInfo* Info)
 	ExecuteStruct<iProcessSynchroEvent> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -948,7 +948,7 @@ int Plugin::ProcessConsoleInput(ProcessConsoleInputInfo *Info)
 	ExecuteStruct<iProcessConsoleInput> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -959,7 +959,7 @@ int Plugin::GetVirtualFindData(GetVirtualFindDataInfo* Info)
 	ExecuteStruct<iGetVirtualFindData> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -970,7 +970,7 @@ void Plugin::FreeVirtualFindData(FreeFindDataInfo* Info)
 	ExecuteStruct<iFreeVirtualFindData> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 }
@@ -980,7 +980,7 @@ int Plugin::GetFiles(GetFilesInfo* Info)
 	ExecuteStruct<iGetFiles> es(-1);
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -992,7 +992,7 @@ int Plugin::PutFiles(PutFilesInfo* Info)
 
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1003,7 +1003,7 @@ int Plugin::DeleteFiles(DeleteFilesInfo* Info)
 	ExecuteStruct<iDeleteFiles> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1014,7 +1014,7 @@ int Plugin::MakeDirectory(MakeDirectoryInfo* Info)
 	ExecuteStruct<iMakeDirectory> es(-1);
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1025,7 +1025,7 @@ int Plugin::ProcessHostFile(ProcessHostFileInfo* Info)
 	ExecuteStruct<iProcessHostFile> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1036,7 +1036,7 @@ int Plugin::ProcessPanelEvent(ProcessPanelEventInfo* Info)
 	ExecuteStruct<iProcessPanelEvent> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1047,7 +1047,7 @@ int Plugin::Compare(CompareInfo* Info)
 	ExecuteStruct<iCompare> es(-2);
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1058,7 +1058,7 @@ int Plugin::GetFindData(GetFindDataInfo* Info)
 	ExecuteStruct<iGetFindData> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1069,7 +1069,7 @@ void Plugin::FreeFindData(FreeFindDataInfo* Info)
 	ExecuteStruct<iFreeFindData> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 }
@@ -1079,7 +1079,7 @@ int Plugin::ProcessPanelInput(ProcessPanelInputInfo* Info)
 	ExecuteStruct<iProcessPanelInput> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1091,7 +1091,7 @@ void Plugin::ClosePanel(ClosePanelInfo* Info)
 	ExecuteStruct<iClosePanel> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 }
@@ -1102,7 +1102,7 @@ int Plugin::SetDirectory(SetDirectoryInfo* Info)
 	ExecuteStruct<iSetDirectory> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1113,7 +1113,7 @@ void Plugin::GetOpenPanelInfo(OpenPanelInfo* Info)
 	ExecuteStruct<iGetOpenPanelInfo> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 }
@@ -1124,7 +1124,7 @@ int Plugin::Configure(ConfigureInfo* Info)
 	ExecuteStruct<iConfigure> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1136,7 +1136,7 @@ bool Plugin::GetPluginInfo(PluginInfo* Info)
 	ExecuteStruct<iGetPluginInfo> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 		if (!bPendingRemove)
 			return true;
@@ -1149,7 +1149,7 @@ int Plugin::GetContentFields(const GetContentFieldsInfo *Info)
 	ExecuteStruct<iGetContentFields> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		const_cast<GetContentFieldsInfo*>(Info)->Instance = m_Instance.get();
+		const_cast<GetContentFieldsInfo*>(Info)->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1160,7 +1160,7 @@ int Plugin::GetContentData(GetContentDataInfo *Info)
 	ExecuteStruct<iGetContentData> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 	return es;
@@ -1171,7 +1171,7 @@ void Plugin::FreeContentData(const GetContentDataInfo *Info)
 	ExecuteStruct<iFreeContentData> es;
 	if (Load() && has(es) && !Global->ProcessException)
 	{
-		const_cast<GetContentDataInfo*>(Info)->Instance = m_Instance.get();
+		const_cast<GetContentDataInfo*>(Info)->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 }
@@ -1181,7 +1181,7 @@ void Plugin::ExitFAR(ExitInfo *Info)
 	ExecuteStruct<iExitFAR> es;
 	if (has(es) && !Global->ProcessException)
 	{
-		Info->Instance = m_Instance.get();
+		Info->Instance = m_Instance->get_opaque();
 		ExecuteFunction(es, Info);
 	}
 }
@@ -1197,6 +1197,9 @@ class custom_plugin_module: public i_plugin_module
 public:
 	NONCOPYABLE(custom_plugin_module);
 	custom_plugin_module(void* Opaque) : m_Opaque(Opaque) {}
+	virtual void* get_opaque() const override { return m_Opaque; }
+
+private:
 	void* m_Opaque;
 };
 
@@ -1283,7 +1286,7 @@ public:
 	{
 		try
 		{
-			const auto Result = m_Imports.pDestroyInstance(static_cast<custom_plugin_module*>(Module.get())->m_Opaque) != FALSE;
+			const auto Result = m_Imports.pDestroyInstance(static_cast<custom_plugin_module*>(Module.get())->get_opaque()) != FALSE;
 			Module.reset();
 			return Result;
 		}
@@ -1299,7 +1302,7 @@ public:
 	{
 		try
 		{
-			return Name.UName? m_Imports.pGetFunctionAddress(static_cast<HANDLE>(static_cast<custom_plugin_module*>(Instance.get())->m_Opaque), Name.UName) : nullptr;
+			return Name.UName? m_Imports.pGetFunctionAddress(static_cast<custom_plugin_module*>(Instance.get())->get_opaque(), Name.UName) : nullptr;
 		}
 		catch (const SException&)
 		{
